<resources>
    <string name="app_name">GameFinder</string>

    <string name="power">Power</string>
    <string name="channelUp">Channel Up</string>
    <string name="channelDown">Channel Down</string>
    <string name="volumeUp">Volume Up</string>
    <string name="volumeDown">Volume Down</string>
    <string name="mute">Mute</string>
    <string name="prev">Prev</string>
    <string name="enter">Enter</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dash">-</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_remote">Remote</string>
    <string name="title_activity_league_interest">My League Interest</string>
    <string name="title_activity_team_interest">My Team Interest</string>
    <string name="title_activity_tv_setup">TV Setup</string>
    <string name="title_activity_channels">Channels Setup</string>
    <string name="title_activity_games_screen">Games</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noAccountPrompt">No account yet? Create one</string>
    <string name="tvBrandPrompt">Tv Brand</string>
    <string name="gamefinderLogo">GameFinder Logo</string>
    <string name="tvConfigName">Tv Configuration Name</string>

    <string name="teamName">Team Name</string>
    <string name="leagueName">League Name</string>
    <string name="tvName">Tv Name</string>
    <string name="gameName">Game Name</string>
    <string name="gameLeague">Game League</string>
    <string name="gameRating">Game Rating</string>
    <string name="gameStartTime">Game Start Time</string>
    <string name="gameNetwork">Game Network</string>
    <string name="gameImage">Game Image</string>
    <string name="watchButton">Watch</string>
    <string name="watch">Watch</string>
    <string name="watchDescription">Watch Button</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_manage_tvs">ManageTvsActivity</string>
    <string name="tvBrand">Tv Brand</string>
    <string name="tvCable">Cable Company</string>
</resources>